--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-kimap (15.07.90-0ubuntu1) UNRELEASED; urgency=medium
+kimap (15.07.90-0ubuntu1) wily; urgency=medium
 
   * Initial release
 
- -- Harald Sitter <sitter@kde.org>  Tue, 11 Aug 2015 10:13:17 +0200
+ -- Harald Sitter <sitter@kde.org>  Tue, 18 Aug 2015 09:52:58 +0100
