--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kimap (4:15.08.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * new upstream release
+
+ -- Clive Johnston <clivejo@aol.com>  Thu, 20 Aug 2015 13:41:15 +0000
+
 kimap (15.07.90-0ubuntu1) wily; urgency=medium
 
   * Initial release
