--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kimap (15.08.0-0ubuntu2~) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Sep 2015 21:32:27 +0200
+
 kimap (15.08.0-0ubuntu1) wily; urgency=medium
 
   * new upstream release
