--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-kimap (15.08.0-0ubuntu2~) UNRELEASED; urgency=medium
+kimap (15.08.0-1~) UNRELEASED; urgency=medium
 
-  * 
+  * Initial Debian release.
 
  -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Sep 2015 21:32:27 +0200
 
