--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kimap (15.08.0-1~) UNRELEASED; urgency=medium
+kimap (15.08.0-1) experimental; urgency=medium
 
   * Initial Debian release.
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Sep 2015 21:32:27 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Sep 2015 22:17:55 +0200
 
 kimap (15.08.0-0ubuntu1) wily; urgency=medium
 
