--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kimap (15.08.1-1~) UNRELEASED; urgency=medium
+kimap (15.08.1-1) experimental; urgency=medium
 
   * New upstream release (15.08.1).
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 17 Sep 2015 19:44:54 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 19 Sep 2015 03:16:30 +0200
 
 kimap (15.08.0-1) experimental; urgency=medium
 
