--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kimap (15.08.1-0ubuntu1) wily; urgency=medium
 
   * New upstream release (15.08.1)
+  * Adding new symbols and removing MISSING
 
  -- Clive Johnston <clivejo@aol.com>  Tue, 22 Sep 2015 17:02:43 +0100
 
