--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kimap (15.08.2-0ubuntu1) UNRELEASED; urgency=medium
+kimap (15.08.2-0ubuntu1) wily; urgency=medium
 
   * Vivid backport
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 09 Oct 2015 14:14:29 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 14 Oct 2015 12:29:12 +0100
 
 kimap (15.08.1-0ubuntu1) wily; urgency=medium
 
