--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kimap (15.08.2-1~) UNRELEASED; urgency=medium
+kimap (15.08.2-1) experimental; urgency=medium
 
   * New upstream release (15.08.2).
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 12 Oct 2015 15:21:57 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 16 Oct 2015 08:06:55 +0200
 
 kimap (15.08.1-1) experimental; urgency=medium
 
