--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kimap (15.12.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (15.12.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Dec 2015 16:11:00 +0100
+
 kimap (15.08.2-1) experimental; urgency=medium
 
   * New upstream release (15.08.2).
