--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 kimap (15.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Clive Johnston ]
   * New upstream release
+
+  [ Scarlett Clark ]
+  * Refresh symbols. Removed MISSING. We opted for a rebuild. 
 
  -- Clive Johnston <clivejo@aol.com>  Sat, 02 Jan 2016 13:57:19 +0000
 
