--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ kimap (15.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
   [ Scarlett Clark ]
   * Refresh symbols. Removed MISSING. We opted for a rebuild. 
+  * Remove the epoch from the symbols. 
 
  -- Clive Johnston <clivejo@aol.com>  Sat, 02 Jan 2016 13:57:19 +0000
 
