--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kimap (15.12.1-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Debian merge, no remaining changes.
+  * New upstream release.
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 12 Jan 2016 13:59:59 -0800
+
 kimap (15.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
   [ Clive Johnston ]
