--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kimap (15.12.0-1~) UNRELEASED; urgency=medium
+kimap (15.12.0-1) experimental; urgency=medium
 
   * New upstream release (15.12.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Dec 2015 16:11:00 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 01 Feb 2016 10:23:40 +0100
 
 kimap (15.08.2-1) experimental; urgency=medium
 
