--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kimap (15.12.0-2~) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 11 Feb 2016 07:26:37 +0100
+
 kimap (15.12.0-1) experimental; urgency=medium
 
   * New upstream release (15.12.0).
