--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kimap (15.12.0-2~) UNRELEASED; urgency=medium
 
-  * 
+  * Bump build dependencies to match packages versions, and not
+    libraries versions.
 
  -- Maximiliano Curia <maxy@debian.org>  Thu, 11 Feb 2016 07:26:37 +0100
 
