--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-kimap (15.12.1-0ubuntu1) UNRELEASED; urgency=medium
+kimap (15.12.1-0ubuntu1) xenial; urgency=medium
 
   * Debian merge, no remaining changes.
   * New upstream release.
   * Debian merge: Second time, rebuild pim stack. 
   * No change. Rebuild. 
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 12 Jan 2016 13:59:59 -0800
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 09 Mar 2016 10:47:15 +0100
 
 kimap (15.12.0-2) experimental; urgency=medium
 
