--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kimap (15.12.2-0ubuntu1) UNRELEASED; urgency=medium
+kimap (15.12.3-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream bugfix release
+  * New upstream bugfix release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 09 Mar 2016 21:31:31 -0800
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 16 Mar 2016 19:45:29 -0700
 
 kimap (15.12.1-0ubuntu1) xenial; urgency=medium
 
