--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,9 @@
-kimap (16.04.1-1~1.gbpe94aa6) UNRELEASED; urgency=medium
-
-  ** SNAPSHOT build @e94aa63795ec4560b1758f622e8a6b6c75b23fe3 **
+kimap (16.04.1-1) unstable; urgency=medium
 
   [ Automatic packaging ]
-  ** SNAPSHOT build @7ffd0d1948193201f91d4145b0b6c3515e7cc247 **
-
   * Bump Standards-Version to 3.9.8
   * Update build-deps and deps with the info from cmake
   * Update symbols files.
-  * UNRELEASED
 
   [ Maximiliano Curia ]
   * Replace the "Historical name" ddeb-migration by its "Modern, clearer" replacement dbgsym-migration.
@@ -16,7 +11,7 @@ kimap (16.04.1-1~1.gbpe94aa6) UNRELEASED; urgency=medium
   * debian/control: Update Vcs-Browser and Vcs-Git fields
   * Update install files
 
- -- Automatic packaging <jenkins@amadeus.gnuservers.com.ar>  Wed, 11 May 2016 00:35:16 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 28 May 2016 01:43:54 +0200
 
 kimap (15.12.0-2) experimental; urgency=medium
 
