--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kimap (17.08.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (17.08.0)
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 21 Aug 2017 18:48:30 +0200
+
 kimap (17.08.0-0neon) xenial; urgency=medium
 
   * New release
