Update changelog for 17.08.0-1 release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,14 @@
-kimap (17.08.0-1~1) UNRELEASED; urgency=medium
+kimap (17.08.0-1) experimental; urgency=medium
 
   * New upstream release (17.08.0)
   * Bump Standards-Version to 4.0.1.
   * Update upstream metadata
   * Update build-deps and deps with the info from cmake
   * Update symbols file
+  * Bump group breaks (17.08)
+  * Release to experimental
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 25 Aug 2017 17:52:23 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 01 Sep 2017 22:09:34 +0200
 
 kimap (17.08.0-0neon) xenial; urgency=medium
 
