--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kimap (4:17.08.3-1) UNRELEASED; urgency=medium
+
+  [ Sandro Knauß ]
+  * New upstream release (17.08.3).
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 13 Dec 2017 13:48:13 +0100
+
 kimap (17.08.0-1) experimental; urgency=medium
 
   * New upstream release (17.08.0)
