--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ kimap (4:17.08.3-1) UNRELEASED; urgency=medium
 
   [ Sandro Knauß ]
   * New upstream release (17.08.3).
+  * Get rid of unnessary break/replaces of kde-l10n-(ast|eo).
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 13 Dec 2017 13:48:13 +0100
 
