--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ kimap (4:17.08.3-1) UNRELEASED; urgency=medium
   [ Sandro Knauß ]
   * New upstream release (17.08.3).
   * Get rid of unnessary break/replaces of kde-l10n-(ast|eo).
+  * Mark libkf5imap-dev corretly as Multi-Arch: all
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 13 Dec 2017 13:48:13 +0100
 
