--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ kimap (4:17.08.3-1) UNRELEASED; urgency=medium
   * Get rid of unnessary break/replaces of kde-l10n-(ast|eo).
   * Mark libkf5imap-dev corretly as Multi-Arch: all
   * Bump Standards-Version to 4.1.2 (No changes needed).
+  * Remove not needed Build-Deps.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 13 Dec 2017 13:48:13 +0100
 
