--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-kimap (17.08.3-1) UNRELEASED; urgency=medium
+kimap (17.08.3-1) unstable; urgency=medium
+
+  * Team upload.
 
   [ Sandro Knauß ]
   * New upstream release (17.08.3).
@@ -9,7 +11,7 @@ kimap (17.08.3-1) UNRELEASED; urgency=medium
   * Bump debhelper build-dep and compat to 10.
   * Set l10npkgs_firstversion_ok to 4:16.04.3-9~
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 13 Dec 2017 13:48:13 +0100
+ -- Sandro Knauß <hefee@debian.org>  Thu, 21 Dec 2017 17:55:20 +0100
 
 kimap (17.08.0-1) experimental; urgency=medium
 
