--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+kimap (17.08.3-2) UNRELEASED; urgency=medium
+
+
+ -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 23 Dec 2017 10:06:20 +0100
+
 kimap (17.08.3-1) unstable; urgency=medium
 
   * Team upload.
