--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 kimap (17.08.3-2) UNRELEASED; urgency=medium
 
+  [ Pino Toscano ]
+  * Remove unused libkf5kdelibs4support-dev build dependency.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 23 Dec 2017 10:06:20 +0100
 
