--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ kimap (17.08.3-2) UNRELEASED; urgency=medium
     as they are not needed.
   * Simplify watch file, and switch it to https.
   * Fix typo in old changelog entry.
+  * Bump Standards-Version to 4.1.3, no changes required.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 23 Dec 2017 10:06:20 +0100
 
