--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-kimap (17.08.3-2) UNRELEASED; urgency=medium
+kimap (17.08.3-2) unstable; urgency=medium
 
-  [ Pino Toscano ]
+  * Team upload.
   * Remove unused libkf5kdelibs4support-dev build dependency.
   * Remove kio-dev, and libboost-dev from the dependencies of libkf5imap-dev,
     as they are not needed.
@@ -8,7 +8,7 @@ kimap (17.08.3-2) UNRELEASED; urgency=medium
   * Fix typo in old changelog entry.
   * Bump Standards-Version to 4.1.3, no changes required.
 
- -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 23 Dec 2017 10:06:20 +0100
+ -- Pino Toscano <pino@debian.org>  Sat, 20 Jan 2018 10:30:22 +0100
 
 kimap (17.08.3-1) unstable; urgency=medium
 
